--- a/angular.json
+++ b/angular.json
@@ -129,7 +129,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "525b53d1-8b12-4c7d-b26d-218c7b065f2b"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
